sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/Farmstar_C2C_Visit__c.object-meta.xml
<CustomObject>
    <label>Farmstar C2C Visit</label>
    <nameField>
        <displayFormat>FS-C2C-{0000}</displayFormat>
        <label>Farmstar C2C Visit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Farmstar C2C Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>