sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sanergy Agricultural Products Customers</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Farmstar C2C Visits</relationshipLabel>
    <relationshipName>Farmstar_C2C_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>