sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/Acres_Evergrow_will_be_used_on__c.field-meta.xml
<CustomField>
    <fullName>Acres_Evergrow_will_be_used_on__c</fullName>
    <label>Acres Evergrow will be used on</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>