sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes__c</fullName>
    <label>Additional Notes</label>
    <type>TextArea</type>
</CustomField>