sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/Balance_Amount_Owed__c.field-meta.xml
<CustomField>
    <fullName>Balance_Amount_Owed__c</fullName>
    <label>Balance Amount Owed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>