sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/Bigger_fruits__c.field-meta.xml
<CustomField>
    <fullName>Bigger_fruits__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bigger fruits</label>
    <type>Checkbox</type>
</CustomField>