sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/Checked_metric_sheets_for_crop_performan__c.field-meta.xml
<CustomField>
    <fullName>Checked_metric_sheets_for_crop_performan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checked metric sheets for crop performan</label>
    <type>Checkbox</type>
</CustomField>