sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/Collected_renewal_order__c.field-meta.xml
<CustomField>
    <fullName>Collected_renewal_order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collected renewal order</label>
    <type>Checkbox</type>
</CustomField>