sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/Crop_Evergrow_will_be_Used_On__c.field-meta.xml
<CustomField>
    <fullName>Crop_Evergrow_will_be_Used_On__c</fullName>
    <label>Crop Evergrow will be Used On</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Close</fullName>
            </value>
            <value>
                <fullName>Alfalfa</fullName>
            </value>
            <value>
                <fullName>Apples</fullName>
            </value>
            <value>
                <fullName>Asparagus</fullName>
            </value>
            <value>
                <fullName>Aubergines</fullName>
            </value>
            <value>
                <fullName>Baby Carrots</fullName>
            </value>
            <value>
                <fullName>Bamboo</fullName>
            </value>
            <value>
                <fullName>Bananas</fullName>
            </value>
            <value>
                <fullName>Beans</fullName>
            </value>
            <value>
                <fullName>Beets</fullName>
            </value>
            <value>
                <fullName>Brassicas</fullName>
            </value>
            <value>
                <fullName>Broccoli</fullName>
            </value>
            <value>
                <fullName>Cabbage</fullName>
            </value>
            <value>
                <fullName>Carrots</fullName>
            </value>
            <value>
                <fullName>Cassava</fullName>
            </value>
            <value>
                <fullName>Chillies</fullName>
            </value>
            <value>
                <fullName>Citrus</fullName>
            </value>
            <value>
                <fullName>Coffee</fullName>
            </value>
            <value>
                <fullName>Cotton</fullName>
            </value>
            <value>
                <fullName>Cucumbers</fullName>
            </value>
            <value>
                <fullName>Flowers</fullName>
            </value>
            <value>
                <fullName>French Beans</fullName>
            </value>
            <value>
                <fullName>Garden Peas</fullName>
            </value>
            <value>
                <fullName>Grapes</fullName>
            </value>
            <value>
                <fullName>Grasses/Fodder</fullName>
            </value>
            <value>
                <fullName>Herbs &amp; Spices</fullName>
            </value>
            <value>
                <fullName>Kale</fullName>
            </value>
            <value>
                <fullName>Landscaping</fullName>
            </value>
            <value>
                <fullName>Leeks</fullName>
            </value>
            <value>
                <fullName>Lentils</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>