sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/Delivery_instructions__c.field-meta.xml
<CustomField>
    <fullName>Delivery_instructions__c</fullName>
    <label>Delivery instructions</label>
    <type>TextArea</type>
</CustomField>