sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/Deposit_Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Amount_Received__c</fullName>
    <label>Deposit Amount Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>