sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/Earlier_flowering__c.field-meta.xml
<CustomField>
    <fullName>Earlier_flowering__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Earlier flowering</label>
    <type>Checkbox</type>
</CustomField>