sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/Earlier_fruit_pod_formation__c.field-meta.xml
<CustomField>
    <fullName>Earlier_fruit_pod_formation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Earlier fruit/pod formation</label>
    <type>Checkbox</type>
</CustomField>