sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/Evaluated_harvest_results__c.field-meta.xml
<CustomField>
    <fullName>Evaluated_harvest_results__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Evaluated harvest results</label>
    <type>Checkbox</type>
</CustomField>