sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/Evergrow_50Kg_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Evergrow_50Kg_Quantity__c</fullName>
    <label>Evergrow - [50Kg]-Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>