sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/Expect_to_make_more_money_with_Evergrow__c.field-meta.xml
<CustomField>
    <fullName>Expect_to_make_more_money_with_Evergrow__c</fullName>
    <label>Expect to make more money with Evergrow</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>