sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/Expected_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Close_Date__c</fullName>
    <label>Expected Close Date</label>
    <type>Date</type>
</CustomField>