sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/Expected_ROI_per_Acre__c.field-meta.xml
<CustomField>
    <fullName>Expected_ROI_per_Acre__c</fullName>
    <label>Expected ROI per Acre</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>