sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/Free_or_Discounted_Trial__c.field-meta.xml
<CustomField>
    <fullName>Free_or_Discounted_Trial__c</fullName>
    <label>Free or Discounted Trial?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>