sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/GPS_Latitude__c.field-meta.xml
<CustomField>
    <fullName>GPS_Latitude__c</fullName>
    <label>GPS Latitude</label>
    <precision>9</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>