sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/GPS_Longitude__c.field-meta.xml
<CustomField>
    <fullName>GPS_Longitude__c</fullName>
    <label>GPS Longitude</label>
    <precision>9</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>