sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/Harvested_Earlier__c.field-meta.xml
<CustomField>
    <fullName>Harvested_Earlier__c</fullName>
    <label>Harvested Earlier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>