sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/Higher_crop_vigour__c.field-meta.xml
<CustomField>
    <fullName>Higher_crop_vigour__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Higher crop vigour</label>
    <type>Checkbox</type>
</CustomField>