sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/Higher_germination__c.field-meta.xml
<CustomField>
    <fullName>Higher_germination__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Higher germination %</label>
    <type>Checkbox</type>
</CustomField>