sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/Higher_quality_with_Evergrow__c.field-meta.xml
<CustomField>
    <fullName>Higher_quality_with_Evergrow__c</fullName>
    <label>Higher quality with Evergrow</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Don&#39;t know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>