sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/How_much_more_money_from_Evergrow__c.field-meta.xml
<CustomField>
    <fullName>How_much_more_money_from_Evergrow__c</fullName>
    <label>How much more money from Evergrow?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>