sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/Issued_metric_sheets__c.field-meta.xml
<CustomField>
    <fullName>Issued_metric_sheets__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Issued metric sheets</label>
    <type>Checkbox</type>
</CustomField>