sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/Kind_of_Control_Plot_Allocated_for_Crop__c.field-meta.xml
<CustomField>
    <fullName>Kind_of_Control_Plot_Allocated_for_Crop__c</fullName>
    <label>Kind of Control Plot Allocated for Crop</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equal size control plot</fullName>
            </value>
            <value>
                <fullName>The control area is smaller than the Evergrow area</fullName>
            </value>
            <value>
                <fullName>The Evergrow area is smaller than the control area</fullName>
            </value>
            <value>
                <fullName>The farmer has not allocated a control area</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>