sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/M_Pesa_Code__c.field-meta.xml
<CustomField>
    <fullName>M_Pesa_Code__c</fullName>
    <label>M-Pesa Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>