sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/More_flowers__c.field-meta.xml
<CustomField>
    <fullName>More_flowers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>More flowers</label>
    <type>Checkbox</type>
</CustomField>