sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/More_fruits__c.field-meta.xml
<CustomField>
    <fullName>More_fruits__c</fullName>
    <defaultValue>false</defaultValue>
    <label>More fruits</label>
    <type>Checkbox</type>
</CustomField>