sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/Next_Planting_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Planting_Date__c</fullName>
    <label>Next Planting Date</label>
    <type>Date</type>
</CustomField>