sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/Next_Sale_Target__c.field-meta.xml
<CustomField>
    <fullName>Next_Sale_Target__c</fullName>
    <label>Next Sale Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>