sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/Opening_Date__c.field-meta.xml
<CustomField>
    <fullName>Opening_Date__c</fullName>
    <label>Opening Date</label>
    <type>Date</type>
</CustomField>