sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Farmstar C2C Visits</relationshipLabel>
    <relationshipName>Farmstar_C2C_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>