sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/Opportunity_Product3__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Evergrow - [25KG]</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.Name</field>
            <operation>equals</operation>
            <value>EVERGROW - [25KG]</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Farmstar C2C Visits (Opportunity Product)</relationshipLabel>
    <relationshipName>Farmstar_C2C_Visits2</relationshipName>
    <type>Lookup</type>
</CustomField>