sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/Opportunity_Product4__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Evergrow - [5Kg]</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.Name</field>
            <operation>equals</operation>
            <value>Evergrow - [5Kg],Evergrow Sample - 5kg - 20% DISCOUNT,Evergrow Sample - 5kg - 50% DISCOUNT,Evergrow Sample - 5kg - FREE</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Farmstar C2C Visits (Opportunity Product)</relationshipLabel>
    <relationshipName>Farmstar_C2C_Visits3</relationshipName>
    <type>Lookup</type>
</CustomField>