sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <label>Opportunity Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closing</fullName>
            </value>
            <value>
                <fullName>Sale Confirmed</fullName>
            </value>
            <value>
                <fullName>Presented Sale Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>