sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/Payment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Payment_Schedule__c</fullName>
    <label>Payment Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upfront</fullName>
            </value>
            <value>
                <fullName>50% Down, 50% on Delivery</fullName>
            </value>
            <value>
                <fullName>Other - Discussed with Finance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>