sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/Planned_Balance_Collection_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Balance_Collection_Date__c</fullName>
    <label>Planned Balance Collection Date</label>
    <type>Date</type>
</CustomField>