sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/Planned_Planting_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Planting_Date__c</fullName>
    <label>Planned Planting Date</label>
    <type>Date</type>
</CustomField>