sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/Preferred_Delivery_Pickup_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Delivery_Pickup_Date_Time__c</fullName>
    <label>Preferred Delivery/ Pickup Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>