sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/Primary_Salesperson__c.field-meta.xml
<CustomField>
    <fullName>Primary_Salesperson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Salesperson</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Farmstar C2C Visits</relationshipLabel>
    <relationshipName>Farmstar_C2C_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>