sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>