sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/Probability__c.field-meta.xml
<CustomField>
    <fullName>Probability__c</fullName>
    <label>Probability (%)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>