sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/Provided_non_Evergrow_advice__c.field-meta.xml
<CustomField>
    <fullName>Provided_non_Evergrow_advice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Provided non-Evergrow advice</label>
    <type>Checkbox</type>
</CustomField>