sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/Purchase_Kgs__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Kgs__c</fullName>
    <label>Purchase Kgs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>