sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/Reason_Why_Lost_other__c.field-meta.xml
<CustomField>
    <fullName>Reason_Why_Lost_other__c</fullName>
    <label>Reason Why Lost (other)</label>
    <type>TextArea</type>
</CustomField>