sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/Sales_Order_Signed__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Signed__c</fullName>
    <label>Sales Order Signed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>