sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/Specify_if_Other__c.field-meta.xml
<CustomField>
    <fullName>Specify_if_Other__c</fullName>
    <label>Specify if Other</label>
    <type>TextArea</type>
</CustomField>