sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/Target_Sales_Volume__c.field-meta.xml
<CustomField>
    <fullName>Target_Sales_Volume__c</fullName>
    <label>Target Sales Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>