sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/Territory_Pocket__c.field-meta.xml
<CustomField>
    <fullName>Territory_Pocket__c</fullName>
    <label>Territory Pocket</label>
    <length>40</length>
    <type>Text</type>
</CustomField>