sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/Trained_on_planting_and_record_keeping__c.field-meta.xml
<CustomField>
    <fullName>Trained_on_planting_and_record_keeping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trained on planting and record-keeping</label>
    <type>Checkbox</type>
</CustomField>