sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/Very_Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Very_Next_Step__c</fullName>
    <label>Very Next Step</label>
    <length>255</length>
    <type>Text</type>
</CustomField>