sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/fields/Very_Next_Step_Date__c.field-meta.xml
<CustomField>
    <fullName>Very_Next_Step_Date__c</fullName>
    <label>Very Next Step Date</label>
    <type>Date</type>
</CustomField>