sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/recordTypes/Farmstar_C2C_Monitoring_Visit.recordType-meta.xml
<RecordType>
    <fullName>Farmstar_C2C_Monitoring_Visit</fullName>
    <active>true</active>
    <label>Farmstar C2C Monitoring Visit</label>
</RecordType>