sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/recordTypes/Farmstar_C2C_Planting_Visit.recordType-meta.xml
<RecordType>
    <fullName>Farmstar_C2C_Planting_Visit</fullName>
    <active>true</active>
    <label>Farmstar C2C Planting Visit</label>
</RecordType>