sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/validationRules/NewOpportunitySatage.validationRule-meta.xml
<ValidationRule>
    <fullName>NewOpportunitySatage</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  Create_Opportunity__c = true,
OR(ISPICKVAL( Opportunity_Stage__c , &quot;&quot;),
  ISBLANK(Close_Date__c),
  ISPICKVAL( Sales_Order_Signed__c , &quot;&quot;)
  )
)</errorConditionFormula>
    <errorMessage>Please at least fill Stage, Close Date And Sales Order Signed Fields for the Opportunity you want to Create</errorMessage>
</ValidationRule>