sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/validationRules/OpportunityProductSelection.validationRule-meta.xml
<ValidationRule>
    <fullName>OpportunityProductSelection</fullName>
    <active>false</active>
    <errorConditionFormula>AND( Create_Opportunity__c = true,  ISBLANK(Opportunity_Product__c),
ISBLANK(Opportunity_Product2__c),
ISBLANK(Opportunity_Product3__c),
ISBLANK(Opportunity_Product4__c)  )</errorConditionFormula>
    <errorMessage>Please add at least one product for the Opportunity you want to create.</errorMessage>
</ValidationRule>