sfSandBoxCode/force-app/main/default/objects/Farmstar_C2C_Visit__c/validationRules/PaymentAndDeliveryInformationValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>PaymentAndDeliveryInformationValidation</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
    Create_Opportunity__c = true,
    ISPICKVAL( Opportunity_Stage__c , &quot;Sale Confirmed&quot;),
    OR( ISBLANK(Delivery_instructions__c ) ,
       ISBLANK(Deposit_Amount_Received__c ),
       ISBLANK( Primary_Salesperson__c ),
       ISBLANK( Preferred_Delivery_Pickup_Date_Time__c ),
       ISPICKVAL( Free_or_Discounted_Trial__c , &quot;&quot;) ,
       ISPICKVAL( Delivery_Method__c , &quot;&quot;),
       ISBLANK( Delivery_instructions__c ),
       ISPICKVAL(  Payment_Method__c , &quot;&quot;),
       ISPICKVAL( Payment_Schedule__c , &quot;&quot;)
      )
)</errorConditionFormula>
    <errorMessage>Please fill payment and delivery information</errorMessage>
</ValidationRule>